<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B3BD9D"
        tools:context=".RegisterActivity">


    <android.support.constraint.ConstraintLayout
            android:layout_width="412dp"
            android:layout_height="502dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtUsername"
                android:hint="@string/name_1"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="48dp"
                android:layout_marginStart="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints=""
                tools:targetApi="o"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txtPassword" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txtUsername"
                app:layout_constraintStart_toStartOf="@+id/txtUsername"
                app:layout_constraintEnd_toEndOf="@+id/txtUsername"
                android:hint="@string/password_1"
                android:autofillHints=""
                tools:targetApi="o"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtName"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txtPassword"
                app:layout_constraintStart_toStartOf="@+id/txtUsername"
                app:layout_constraintEnd_toEndOf="@+id/txtUsername"
                android:hint="@string/name_2"
                android:autofillHints=""
                tools:targetApi="o"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtTel"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/txtName"
                app:layout_constraintStart_toStartOf="@+id/txtUsername"
                app:layout_constraintEnd_toEndOf="@+id/txtUsername"
                android:hint="@string/tel_1"
                app:layout_constraintHorizontal_bias="0.0"
                android:autofillHints=""
                tools:targetApi="o"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtFb"
                android:layout_marginTop="72dp"
                app:layout_constraintTop_toBottomOf="@+id/txtName"
                app:layout_constraintStart_toStartOf="@+id/txtTel"
                app:layout_constraintEnd_toEndOf="@+id/txtUsername"
                android:hint="@string/facebook_1"
                app:layout_constraintHorizontal_bias="0.0"
                android:autofillHints=""
                tools:targetApi="o"/>


        <Button
                android:textColor="#FFFFFF"
                android:text="@string/register_1"
                android:layout_width="0dp"
                android:background="@drawable/btn_please_login"
                android:layout_height="wrap_content"
                android:id="@+id/btnRegister"
                app:layout_constraintEnd_toEndOf="@+id/txtName"
                app:layout_constraintStart_toStartOf="@+id/txtName"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/txtName"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.512"/>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>