<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#B3BD9D"
             tools:context=".MainActivity">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0">


            <ImageView
                    android:src="@drawable/ic_svg_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/login_image"
                    app:layout_constraintHorizontal_bias="0.502"/>

            <TextView
                    android:text="@string/please_login_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:layout_marginTop="40dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="120dp"
                    android:layout_marginStart="120dp"
                    android:textStyle="bold"/>
            <Button
                    android:textColor="#FFFFFF"
                    android:text="@string/login_please"
                    android:layout_width="0dp"
                    android:background="@drawable/btn_please_login"
                    android:layout_height="wrap_content"
                    android:id="@+id/btnLogin"
                    app:layout_constraintEnd_toEndOf="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="@+id/imageView2"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp"
                    android:textStyle="bold"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>